# cell-machine-art-generator

./: Cargo.toml
src/: main.rs
