[package]
name = "cell-machine-art-generator"
version = "0.1.0"
authors = ["bs2kbs2k <10294621+bs2kbs2k@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialog = "0.3.0"
image = "0.23.14"
imagequant = "3.0.3"
