[package]
name = "cell-machine-art-generator"
version = "0.1.0"
authors = ["bs2kbs2k <10294621+bs2kbs2k@users.noreply.github.com>"]
edition = "2018"
description = "A simple program to generate pixel art for Cell Machine Mystic Mod"
license = "GPL-3.0-or-later"
repository = "https://github.com/bs2kbs2k/cell-machine-art-generator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
image = "0.23.14"
imagequant = "3.0.3"
native-dialog = "0.5.5"
